Changes related to Calendar section.

--- a/AngularMvcProject/App/View/Calendar/Calendar.html
+++ b/AngularMvcProject/App/View/Calendar/Calendar.html
@@ -180,7 +180,7 @@
                     </div>
                     <div class="business_right">
                         <h3 class="businesshrs">Business Operating Hours</h3>
-                        <div class="drop_select">
+                        <div class="drop_select cabtnstyle">
                             <label>Time Zone</label>
                             <select class="form-control">
                                 <option value="(GMT +02:00) Central European Time - Andorra">(GMT +02:00) Central European Time - Andorra</option>
@@ -317,7 +317,7 @@
                     Edit Appointment
                     <i class="fa fa-angle-double-right" aria-hidden="true"></i>
                 </a>
-                <a class="apptDeleteBtn cursorhand" ng-click="DeleteAppointment(AppointmentBookingId)">Delete</a>
+                <a class="apptDeleteBtn cursorhand" ng-click="DeleteAppointment(AppointmentBookingId,AppointmentEmployeeId)">Delete</a>
             </div>
         </div>
     </div>
