--- a/AngularMvcProject/App/View/Setting/Staff.html
+++ b/AngularMvcProject/App/View/Setting/Staff.html
@@ -421,7 +421,7 @@
                                                     <div class="form-group">
                                                         <label class="control-label col-md-2 col-xs-12 col-sm-12">Mobile</label>
                                                         <div class="col-md-6 col-xs-12 col-sm-12">
-                                                            <input type="text" class="form-control" id="text" placeholder="Mobile" name="text">
+                                                            <input type="text" class="form-control" id="text" ng-model="staffMobileNo" placeholder="Mobile" ng-blur="UpdateStaff()" name="text">
 
                                                         </div>
                                                     </div>
