--- a/AngularMvcProject/Content/Assets/css/custom.css
+++ b/AngularMvcProject/Content/Assets/css/custom.css
@@ -200,7 +200,7 @@ li.upgrade_btn a:hover {
 
 .right_section > div{
     display: table-cell;
-    height:100%;
+    height:91%;
     /*width:86%;
     float:left;
     height:100%;
@@ -5559,11 +5559,138 @@ div#staff-break .BreakSelectDiv select {
 .calendarPopupDetail li.active {
     border-bottom: 2px solid #000;
 }
-
-
-
-
-
+/*===================26-10-2017 css start here===============*/
+.cstmersidebarl {
+      height:auto !important;
+}
+input.inputcheckbox.ichkbxmrgnt {
+    margin-top: 11px !important;
+}
+span.providerImage.cursorhand.cstmersidepimg img {
+    width: 16px;
+    height: 20px;
+    border-radius: 100%;
+    margin-top: 10px;
+   
+}
+.cstmerdeletebnt {
+    margin-right: 17px;
+    margin-bottom: 7px;
+}
+.col-sm-8.cstmercntentcnt {
+    padding-left: 1px;
+}
+.cstmercntentcnt:hover .cstmerdeletebnt {
+    /* padding-left: 1px; */
+    display: block;
+}
+.cstmerdeletebnt {
+    display: none;
+}
+.popover.left.staff-delete-box.staffbbtns {
+    left: auto;
+    right: 44px;
+    width: 211px;
+    top: -32px;
+    display: block;
+    height: 91px;
+}
+.arrow.staffarrowbtn {
+    top: 50%;
+    right: -11px;
+    margin-top: -11px;
+    border-right-width: 0;
+    border-left-color: #999;
+    border-left-color: rgba(0,0,0,.25);
+}
+h3.popover-title.surecntnt {
+    font-size: 14px;
+    font-weight: normal;
+    padding: 8px 14px;
+    color: #455862 !important;
+    margin: 0;
+    padding: 8px 14px;
+    font-size: 14px !important;
+    font-weight: normal;
+    line-height: 18px;
+    background-color: #f7f7f7;
+    border-bottom: 1px solid #ebebeb;
+    -webkit-border-radius: 5px 5px 0 0;
+    -moz-border-radius: 5px 5px 0 0;
+    border-radius: 5px 5px 0 0;
+}
+.btn_box.staffbtnpadn {
+    padding: 15px;
+}
+button.new-gray-btn.btn.btn-default.cancelbtn {
+    font-weight: normal !important;
+    background: #F1F5F7;
+    border-color: #F1F5F7;
+    background: #F1F5F7;
+    border-color: #F1F5F7;
+    font-size: 14px !important;
+    line-height: 32px !important;
+    margin-top: -5px;
+    padding: 1px 20px !important;
+    text-align: center;
+    color: #252C32;
+    border-style: solid;
+    border-width: 1px;
+    height: 34px;
+    border-radius: 3px !important;
+    cursor: pointer;
+    border: solid 1px #D7D7D7;
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    /* user-select: none; */
+    /* background-image: none; */
+    border: 1px solid transparent;
+    /* border-radius: 4px; */
+}
+button.btn.btn-danger.deletebtn {
+    margin-right: 4px;
+    height: 35px !important;
+    line-height: 32px !important;
+    background: none repeat scroll 0 0 #f84c58 !important;
+    border-color: #f84c58 !important;
+    color: whitesmoke !important;
+    background: #F1F5F7;
+    border-color: #F1F5F7;
+    font-size: 14px !important;
+    line-height: 32px !important;
+    margin-top: -6px;
+    padding: 1px 20px !important;
+    text-align: center;
+    color: #252C32;
+    border-style: solid;
+    border-width: 1px;
+    height: 34px;
+    border-radius: 3px !important;
+    cursor: pointer;
+    border: solid 1px #D7D7D7;
+}
+.business-card tip {
+    max-width: 500px;
+    min-width: 322px;
+    width: auto;
+}
+.discripDiv.ng-binding ul {
+    border-bottom: 1px solid transparent !important;
+}
+/*===================26-10-2017 css end here===============*/
 
 /* sep-27 css start here           */
 
