--- a/AngularMvcProject/App/View/Calendar/Calendar.html
+++ b/AngularMvcProject/App/View/Calendar/Calendar.html
@@ -128,27 +128,27 @@
 
     </header>
 
-    <div class="left_sidebar">
+    <div class="left_sidebar sidebtipt">
         <ul class="nav">
-            <li class="side-nav-tooltip" id="side-dashboard" data-toggle="tooltip" data-original-title="Dashboard" data-placement="right">
+            <li class="side-nav-tooltip" id="side-dashboard" tooltips tooltip-template="Dashboard" tooltip-side="right">
                 <a ng-click="redirecttodashboard()" style="cursor:pointer;" data-toggle="tab" class="setmore-icon-home" id="startDashboard"><small>Dashboard</small></a>
             </li>
-            <li class="side-nav-tooltip active" id="side-calendar" data-placement="right" data-toggle="tooltip" data-original-title="Calendar">
+            <li class="side-nav-tooltip active" id="side-calendar" tooltips tooltip-template="Calendar" tooltip-side="right">
                 <a ng-click="redirectToCalendar()" data-toggle="tab" class="setmore-icon-calendar-31" id="startCalendar"><small>Calendar</small></a>
             </li>
-            <li class="side-nav-tooltip" id="side-customers" title="" data-toggle="tooltip" data-original-title="Customers" data-placement="right">
+            <li class="side-nav-tooltip" id="side-customers" title="" tooltips tooltip-template="Customers" tooltip-side="right">
                 <a ng-click="redirecttoCustomer()" style="cursor:pointer;" data-toggle="tab" class="setmore-icon-users2" id="side-nav-customers"><small>Customers</small></a>
             </li>
-            <li class="side-nav-tooltip" id="side-profile" data-toggle="tooltip" data-original-title="Apps &amp; Integrations" data-placement="right">
+            <li class="side-nav-tooltip" id="side-profile appsnavpstng" tooltips tooltip-template="Apps &amp; Integrations" tooltip-side="right">
                 <a href="" data-toggle="tab" class="setmore-icon-laptop-phone"><small>Profile&nbsp;</small></a>
             </li>
 
-            <li class="side-nav-tooltip " id="settings_new" data-original-title="Settings" data-placement="right" data-toggle="tooltip">
+            <li class="side-nav-tooltip " id="settings_new" tooltips tooltip-template="Settings" tooltip-side="right">
                 <a ng-click="RedirecttoStaff()" data-toggle="tab" class="fa fa-cog"><small>Settings</small></a>
             </li>
-            <li class="side-nav-tooltip reports" data-toggle="tooltip" data-original-title="Reports" data-placement="right"> <a class="fa fa-line-chart" ng-click="RedirecttoReport()"><small>Reports</small></a> </li>
+            <li class="side-nav-tooltip reports" tooltips tooltip-template="Reports" tooltip-side="right"> <a class="fa fa-line-chart" ng-click="RedirecttoReport()"><small>Reports</small></a> </li>
 
-            <li class="side-nav-tooltip blue_icon" data-toggle="tooltip" data-original-title="Premium" data-placement="right"> <a class="setmore-icon-shield-alert" href="#"><small>Premium</small></a> </li>
+            <li class="side-nav-tooltip blue_icon" tooltips tooltip-template="Premium" tooltip-side="right"> <a class="setmore-icon-shield-alert" href="#"><small>Premium</small></a> </li>
         </ul>
     </div>
 
@@ -365,8 +365,8 @@
                                         <div class="form-group">
                                             <label class="control-label col-sm-4" for="email">Provider</label>
                                             <div class="col-sm-8">
-                                                <div class="dropdown appointProvider">                                                   
-                                                    <select class="btn btn-default dropdown-toggle" ng-model="selectedprovider" id="dropdownMenu2" name="providerdd" aria-haspopup="true" aria-expanded="false" ng-change="GetAllocateServiceToEmployee(selectedprovider)"  required >
+                                                <div class="dropdown appointProvider">
+                                                    <select class="btn btn-default dropdown-toggle" ng-model="selectedprovider" id="dropdownMenu2" name="providerdd" aria-haspopup="true" aria-expanded="false" ng-change="GetAllocateServiceToEmployee(selectedprovider)" required>
                                                         <option ng-repeat="item in Provider" ng-selected="selectedprovider==item.Id" value="{{item.Id}}">{{item.staffName}}</option>
                                                     </select>
                                                 </div>
